--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,9 +14,9 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com/" crossorigin>
 
-    <link rel="stylesheet" href="css/stylesheet.css">
-    <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/projects.css">
+    <link rel="stylesheet" href="/assets/css/stylesheet.css">
+    <link rel="stylesheet" href="/assets/css/header.css">
+    <link rel="stylesheet" href="/assets/css/projects.css">
 
     <script src="https://code.iconify.design/1/1.0.7/iconify.min.js" defer></script>
 </head>
