--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -7,7 +7,7 @@ header {
 header > h1 {
     font-size: 5rem;
     font-weight: bold;
-    margin: 1rem 0 0 0;
+    margin: 0 0 0 0;
     text-align: center;
 }
 
@@ -28,4 +28,11 @@ header > hr {
     border: none;
     background-color: black;
     width: 100%;
+}
+
+@media (min-width: 576px) {
+    header > h1 { margin: 0.5rem 0 0 0; }
+}
+@media (min-width: 768px) {
+    header > h1 { margin: 1rem 0 0 0; }
 }
