Change company to client

--- a/_includes/project_summary.html
+++ b/_includes/project_summary.html
@@ -5,7 +5,7 @@
                 {{ include.project.project_title }}
             </a>
         </h3>
-        <p class="company">{{ include.project.client }}</p>
+        <p class="client">{{ include.project.client }}</p>
         <p>{{ include.project.summary }}</p>
     </div>
     <!--<aside>
