--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -5,7 +5,7 @@ layout: default
     <div>
         <h3>{{ page.project_title }}</h3>
         {% if page.client != nil %}
-            <p class="company">{{ page.client }}</p>
+        <p class="client">{{ page.client }}</p>
         {% endif %}
         <p>{{ page.summary }}</p>
         <div>
