--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -24,7 +24,7 @@ article aside a {
 article h3 {
     margin: 0;
 }
-article .company {
+article .client {
     font-size: 0.75rem;
     color: #303030;
     margin: 0;
