Change title link to relative to root

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header>
-    <h1><a href="index.html">JOHN ELLIS</a></h1>
+    <h1><a href="/">JOHN ELLIS</a></h1>
     <p>Software Engineering, The University of Sheffield</p>
     <div class="links">
         <a href="https://github.com/johnellis0" class="link" target="_blank" rel="noopener noreferrer">
