--- a/_includes/project_summary.html
+++ b/_includes/project_summary.html
@@ -1,19 +1,9 @@
-<article>
-    <div>
-        <h3>
-            <a class="link" href="{{ include.project.url }}">
-                {{ include.project.project_title }}
-            </a>
-        </h3>
-        <p class="client">{{ include.project.client }}</p>
-        <p>{{ include.project.summary }}</p>
-    </div>
-    <!--<aside>
-        <a href="#" class="link">Case Study</a>
-
-        <a href="https://github.com/johnellis0/gs-sheets-form-utils" class="link" target="_blank" rel="noopener noreferrer" >
-            <span class="iconify" data-icon="logos-github-icon" data-inline="false"></span>
-            gs-sheets-form-utils
+<article class="project-summary">
+    <h3>
+        <a class="link" href="{{ include.project.url }}">
+            {{ include.project.project_title }}
         </a>
-    </aside>-->
+    </h3>
+    <p class="client">{{ include.project.client }}</p>
+    <p>{{ include.project.summary }}</p>
 </article>
