--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -1,17 +1,20 @@
 ---
 layout: default
 ---
-<article>
-    <div>
-        <h3>{{ page.project_title }}</h3>
+<article class="project-full">
+        <h2>{{ page.project_title }}</h2>
+
         {% if page.client != nil %}
-        <p class="client">{{ page.client }}</p>
+            <p class="client">{{ page.client }}</p>
         {% endif %}
-        <p>{{ page.summary }}</p>
+
+        <!-- <p>{{ page.summary }}</p> -->
+
         <div>
             {{ content | markdownify }}
         </div>
-    </div>
+
+</article>
     <!--
     <aside>
         <a href="#" class="link">Case Study</a>
@@ -22,4 +25,3 @@ layout: default
         </a>
     </aside>
     -->
-</article>
