--- a/assets/css/header.scss
+++ b/assets/css/header.scss
@@ -1,38 +1,40 @@
-header {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
+---
+---
 
-header > h1 {
+header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  & > h1 {
     font-size: 5rem;
     font-weight: bold;
     margin: 0 0 0 0;
     text-align: center;
-}
 
-header > h1 > a {
-    color: black;
-    text-decoration: none;
-}
+    & > a {
+      color: black;
+      text-decoration: none;
+    }
+  }
 
-header > p {
+  & > p {
     text-align: center;
     font-size: 1rem;
     color: #303030;
     margin: 0 0 0.5rem 0;
-}
+  }
 
-header > hr {
+  & > hr {
     height: 3px;
     border: none;
     background-color: black;
     width: 100%;
+  }
 }
 
 @media (min-width: 576px) {
-    header > h1 { margin: 0.5rem 0 0 0; }
+  header > h1 { margin: 0.5rem 0 0 0; }
 }
 @media (min-width: 768px) {
-    header > h1 { margin: 1rem 0 0 0; }
+  header > h1 { margin: 1rem 0 0 0; }
 }
