--- a/assets/css/stylesheet.scss
+++ b/assets/css/stylesheet.scss
@@ -1,3 +1,6 @@
+---
+---
+
 @import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
 
 html {
@@ -17,30 +20,26 @@ section > h2 {
     text-decoration: underline;
 }
 
-h3 > a.link {
-    color: #000000;
-}
-
 a.link {
-    /*font-size: 1rem;*/
-    color: #808080;
     color: #000000;
     text-decoration: none;
     display: inline-flex;
     align-items: center;
-}
-a.link:hover {
-    color: #4f4f4f;
-    /*font-weight: bold;*/
-    text-decoration: underline;
-}
-a.link:active {
-    color: #000000;
-    font-weight: bold;
-}
 
-a > .iconify {
-    margin-right: 0.25rem;
+    &:hover {
+        color: #4f4f4f;
+        /*font-weight: bold;*/
+        text-decoration: underline;
+    }
+
+    &:active {
+        color: #000000;
+        font-weight: bold;
+    }
+
+    & > .iconify {
+        margin-right: 0.25rem;
+    }
 }
 
 @media (min-width: 576px) {
