Add repo name & link if set

--- a/_includes/project_summary.html
+++ b/_includes/project_summary.html
@@ -5,5 +5,13 @@
         </a>
     </h3>
     <p class="client">{{ include.project.client }}</p>
+
+    {% if include.project.repo != nil %}
+    <a href={ include.project.repo_url } class="link" target="_blank" rel="noopener noreferrer">
+        <span class="iconify" data-icon="logos-github-icon" data-inline="false"></span>
+        { include.project.repo_name }
+    </a>
+    {% endif %}
+
     <p>{{ include.project.summary }}</p>
 </article>
