--- a/_includes/project_summary.html
+++ b/_includes/project_summary.html
@@ -6,10 +6,10 @@
     </h3>
     <p class="client">{{ include.project.client }}</p>
 
-    {% if include.project.repo != nil %}
-    <a href={ include.project.repo_url } class="link" target="_blank" rel="noopener noreferrer">
+    {% if include.project.repo_url != nil %}
+    <a href={{ include.project.repo_url }} class="link" target="_blank" rel="noopener noreferrer">
         <span class="iconify" data-icon="logos-github-icon" data-inline="false"></span>
-        { include.project.repo_name }
+        {{ include.project.repo_name }}
     </a>
     {% endif %}
 
