--- a/assets/css/header.scss
+++ b/assets/css/header.scss
@@ -5,6 +5,9 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  padding: 0 1em;
+
   & > h1 {
     font-size: 5rem;
     font-weight: bold;
