--- a/_includes/project_summary.html
+++ b/_includes/project_summary.html
@@ -6,12 +6,7 @@
     </h3>
     <p class="client">{{ include.project.client }}</p>
 
-    {% if include.project.repo_url != nil %}
-    <a href={{ include.project.repo_url }} class="link repo" target="_blank" rel="noopener noreferrer">
-        <span class="iconify" data-icon="logos-github-icon" data-inline="false"></span>
-        {{ include.project.repo_name }}
-    </a>
-    {% endif %}
+    {% include repos.html repos=include.project.repos %}
 
     <p>{{ include.project.summary }}</p>
 </article>
