--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -8,12 +8,7 @@ layout: default
             <p class="client">{{ page.client }}</p>
         {% endif %}
 
-        {% if page.repo_url != nil %}
-        <a href={{ page.repo_url }} class="link repo" target="_blank" rel="noopener noreferrer">
-            <span class="iconify" data-icon="logos-github-icon" data-inline="false"></span>
-            {{ page.repo_name }}
-        </a>
-        {% endif %}
+        {% include repos.html repos=page.repos %}
 
         <div>
             {{ content | markdownify }}
