Add external link icon to github links

--- a/_includes/repos.html
+++ b/_includes/repos.html
@@ -3,6 +3,7 @@
         <a href={{ repo.url }} class="link repo" target="_blank" rel="noopener noreferrer">
             <span class="iconify" data-icon="logos-github-icon" data-inline="false"></span>
             {{ repo.name }}
+            <span class="iconify ext-link" data-icon="heroicons-solid:external-link" data-inline="false"></span>
         </a>
     {% endfor %}
 {% endif %}
