Add link to deployed project

--- a/_includes/project_summary.html
+++ b/_includes/project_summary.html
@@ -8,5 +8,7 @@
 
     <p>{{ include.project.summary }}</p>
 
+
+    {% include project_link.html project=include.project %}
     {% include repos.html repos=include.project.repos %}
 </article>
