Wrap project/repo links in div to style to align text

--- a/_includes/project_summary.html
+++ b/_includes/project_summary.html
@@ -8,7 +8,8 @@
 
     <p>{{ include.project.summary }}</p>
 
-
-    {% include project_link.html project=include.project %}
-    {% include repos.html repos=include.project.repos %}
+    <div class="project-links">
+        {% include project_link.html project=include.project %}
+        {% include repos.html repos=include.project.repos %}
+    </div>
 </article>
