--- a/assets/css/projects.scss
+++ b/assets/css/projects.scss
@@ -6,6 +6,12 @@
     padding: 0.5rem;
 }
 
+.project-full {
+    & .project-contents {
+        margin: 16px 0 0 0;
+    }
+}
+
 .project-summary, .project-full{
     & h3 {
         margin: 0;
@@ -25,8 +31,13 @@
         margin: 16px 0 0 0;
     }
 
-    & .repo {
+    & .project-links {
+        display: flex;
+        align-items: end;
         margin: 8px 0 0 0;
+        & a + a {
+            margin-left: 0.5em;
+        }
     }
 }
 
