--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,6 +5,7 @@
         <a href="https://github.com/johnellis0" class="link" target="_blank" rel="noopener noreferrer">
             <span class="iconify" data-icon="logos-github-icon" data-inline="false"></span>
             GitHub
+            <span class="iconify ext-link" data-icon="heroicons-solid:external-link" data-inline="false"></span>
         </a>
         <!-- <a href="#" class="link" target="_blank" rel="noopener noreferrer" >LinkedIn</a> -->
     </div>
