--- a/assets/css/projects.scss
+++ b/assets/css/projects.scss
@@ -4,6 +4,10 @@
 .project-summary {
     border: 3px solid black;
     padding: 0.5rem;
+
+    &:hover {
+        box-shadow: 0 3px 5px #4f4f4f;
+    }
 }
 
 .project-full {
