--- a/assets/css/stylesheet.scss
+++ b/assets/css/stylesheet.scss
@@ -13,6 +13,8 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    margin: 0 0.5em;
 }
 
 section > h2 {
@@ -20,8 +22,14 @@ section > h2 {
     text-decoration: underline;
 }
 
+h1, h2, h3, h4, h5 {
+    & > a.link {
+        color: black;
+    }
+}
+
 a.link {
-    color: #000000;
+    color: cadetblue;
     text-decoration: none;
     display: inline-flex;
     align-items: center;
