--- a/_includes/project_summary.html
+++ b/_includes/project_summary.html
@@ -9,6 +9,9 @@
     <p>{{ include.project.summary }}</p>
 
     <div class="project-links">
+        <a class="link" href="{{ include.project.url }}">
+            Read more...
+        </a>
         {% include project_link.html project=include.project %}
         {% include repos.html repos=include.project.repos %}
     </div>
