--- a/assets/css/stylesheet.scss
+++ b/assets/css/stylesheet.scss
@@ -14,7 +14,7 @@ body {
     flex-direction: column;
     align-items: center;
 
-    margin: 0 0.5em;
+    margin: 0 0.5em 0.5em 0.5em;
 }
 
 section > h2 {
