Refactor SEO into include

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,10 +10,6 @@
         John Ellis
     </title>
 
-    <meta name="author" content="John Ellis">
-    <meta name="description" content="JohnEllis.dev Personal Portfolio Site">
-    <meta name="keywords" content="John Ellis, John Ellis Portfolio, John, Portfolio">
-
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#FFFFFF"/>
 
@@ -29,6 +25,8 @@
     <link rel="manifest" href="/site.webmanifest">
 
     <script src="https://code.iconify.design/1/1.0.7/iconify.min.js" defer></script>
+
+    {% include seo.html %}
 </head>
 
 <body>
