Add structured data to SEO

--- a/_includes/seo.html
+++ b/_includes/seo.html
@@ -1,3 +1,13 @@
 <meta name="author" content="John Ellis">
 <meta name="description" content="John Ellis. Studying Software Engineering at The University of Sheffield. View my portfolio.">
 <meta name="keywords" content="John Ellis, Portfolio, Software Engineer, Software Engineering, University of Sheffield, Work, Projects">
+
+<script type="application/ld+json">
+    {
+        "@context": "http://schema.org/",
+        "@type": "Person",
+        "name": "John Ellis",
+        "affiliation": "The University of Sheffield",
+        "jobTitle": "Software Engineering Student"
+    }
+</script>
