Change link colour to hex

--- a/assets/css/stylesheet.scss
+++ b/assets/css/stylesheet.scss
@@ -29,7 +29,7 @@ h1, h2, h3, h4, h5 {
 }
 
 a.link {
-    color: cadetblue;
+    color: #5f9ea0;
     text-decoration: none;
     display: inline-flex;
     align-items: center;
