--- a/assets/css/stylesheet.scss
+++ b/assets/css/stylesheet.scss
@@ -5,10 +5,13 @@
 
 html {
     font-size: 26px;
+    height: 100%;
 }
 
 body {
     font-family: 'Share Tech Mono', monospace;
+
+    height: 100%;
 
     display: flex;
     flex-direction: column;
