Make header hr style global

--- a/assets/css/stylesheet.scss
+++ b/assets/css/stylesheet.scss
@@ -52,6 +52,13 @@ a.link {
     }
 }
 
+hr {
+    height: 3px;
+    border: none;
+    background-color: black;
+    width: 100%;
+}
+
 .iconify.ext-link {
     font-size: 0.75em;
 }
