--- a/assets/css/header.scss
+++ b/assets/css/header.scss
@@ -2,11 +2,13 @@
 ---
 
 header {
+  width: 100%;
+
   display: flex;
   flex-direction: column;
   align-items: center;
 
-  padding: 0 1em;
+  margin: 0 1em;
 
   & > h1 {
     font-size: 5rem;
