Add sticky footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,11 @@
 <footer>
     <hr>
-    <span>&copy; John Ellis 2020</span>
-    <a href="https://github.com/johnellis0/johnellis.dev" class="link repo" target="_blank" rel="noopener noreferrer" title="View code on GitHub">
-        <span class="iconify" data-icon="logos-github-icon" data-inline="false"></span>
-        View Source
-        <span class="iconify ext-link" data-icon="heroicons-solid:external-link" data-inline="false"></span>
-    </a>
+    <div>
+        <span>&copy; John Ellis 2020</span>
+        <a href="https://github.com/johnellis0/johnellis.dev" class="link repo" target="_blank" rel="noopener noreferrer" title="View code on GitHub">
+            <span class="iconify" data-icon="logos-github-icon" data-inline="false"></span>
+            View Source
+            <span class="iconify ext-link" data-icon="heroicons-solid:external-link" data-inline="false"></span>
+        </a>
+    </div>
 </footer>
