--- a/assets/css/footer.scss
+++ b/assets/css/footer.scss
@@ -3,15 +3,27 @@
 
 footer {
   width: 100%;
+  margin: 0;
 
-  display: flex;
-  flex-wrap: wrap;
-  align-items: end;
-  justify-content: center;
-  margin: 0.5em 0;
-
-  position: fixed;
+  position: sticky;
   bottom: 0;
+
+  & > hr {
+    margin-bottom: 0;
+  }
+
+  & > div {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: end;
+    justify-content: center;
+
+    width: 100%;
+    height: 100%;
+
+    background-color: #ffffff;
+    padding: 0.5em 0;
+  }
 
   & span, a {
     margin: 0 0.5em;
