--- a/assets/css/header.scss
+++ b/assets/css/header.scss
@@ -8,7 +8,8 @@ header {
   flex-direction: column;
   align-items: center;
 
-  margin: 0 1em;
+  box-sizing: border-box;
+  padding: 0 1em;
 
   & > h1 {
     font-size: 5rem;
