--- a/assets/css/stylesheet.scss
+++ b/assets/css/stylesheet.scss
@@ -11,13 +11,19 @@ html {
 body {
     font-family: 'Share Tech Mono', monospace;
 
-    height: 100%;
+    min-height: 100%;
 
     display: flex;
     flex-direction: column;
     align-items: center;
 
-    margin: 0 0.5em 0.5em 0.5em;
+    margin: 0;
+}
+
+main {
+    margin-bottom: auto;
+    box-sizing: border-box;
+    padding: 0 1em 1em 1em;
 }
 
 section > h2 {
@@ -26,6 +32,7 @@ section > h2 {
 }
 
 h1, h2, h3, h4, h5 {
+    word-break: break-word;
     & > a.link {
         color: black;
     }
