--- a/assets/css/header.scss
+++ b/assets/css/header.scss
@@ -12,7 +12,7 @@ header {
   padding: 0 1em;
 
   & > h1 {
-    font-size: 5rem;
+    font-size: 3rem;
     font-weight: bold;
     margin: 0 0 0 0;
     text-align: center;
@@ -38,8 +38,14 @@ header {
 }
 
 @media (min-width: 576px) {
-  header > h1 { margin: 0.5rem 0 0 0; }
+  header > h1 {
+    font-size: 4rem;
+    margin: 0.5rem 0 0 0;
+  }
 }
 @media (min-width: 768px) {
-  header > h1 { margin: 1rem 0 0 0; }
+  header > h1 {
+    font-size: 5rem;
+    margin: 1rem 0 0 0;
+  }
 }
