--- a/assets/css/projects.scss
+++ b/assets/css/projects.scss
@@ -17,11 +17,7 @@
 }
 
 .project-summary, .project-full{
-    & h3 {
-        margin: 0;
-    }
-
-    & h2 {
+    & h2,h3 {
         margin: 1em 0 0 0;
     }
 
