--- a/assets/css/projects.scss
+++ b/assets/css/projects.scss
@@ -22,6 +22,10 @@
     & .project-contents {
         margin: 16px 0 0 0;
     }
+
+    & img {
+        max-width: 100%;
+    }
 }
 
 .project-summary, .project-full{
