--- a/assets/css/projects.scss
+++ b/assets/css/projects.scss
@@ -4,6 +4,7 @@
 .project-summary {
     border: 3px solid black;
     padding: 0.5rem;
+    margin-bottom: 1rem;
 
     & h2,h3 {
         margin: 0;
